# hummus

./: .gitignore  CMakeLists.txt  CREDITS.txt  README.md  README.rtf  premake4.lua  qt.lua
applications/: ATISNetwork.cpp  adonis.cpp  adonis_c.cpp  basic_test.cpp  cardsClassification.cpp  decision_making_test.cpp  delays_2d.cpp  es_test.cpp  generate_rc.cpp  hatsFeatureMaps.cpp  hatsLatency.cpp  hatsNative.cpp  hatsNetwork.cpp  hatsPoisson.cpp  jsonParser.cpp  largeNetwork.cpp  localisation.cpp  minimumCurrent.cpp  minimumWeight.cpp  mp_1D.cpp  mp_rates.cpp  myelinPlasticity1D.cpp  myelin_plasticity.cpp  pokerDVS.cpp  pokerDVS_HATS.cpp  pokerDVS_ULPEC.cpp  rc.cpp  receptiveFieldsTest.cpp  run_rc.cpp  smallNetwork.cpp  spikeSortingNetwork.cpp  stdpTest.cpp  stdp_test.cpp  sudoku.cpp  supervisedNetwork.cpp  test.cpp  test2D.cpp  test2DNetwork.cpp  testNetwork.cpp  test_decision_making.cpp  (+8 more)
data/: 00002.es  2Dtest.txt  hats.zip.REMOVED.git-id  nmnist_test.txt  nmnist_testLabel.txt  nmnist_training.txt  nmnist_trainingLabel.txt  pythonExample.txt  stdpTest.txt  teacherSignalAccelerate.txt  teacherSignalDecelerate.txt  teacherSignalFull.txt  testDecision.txt  testDecisionLabel.txt  testSave.json  test_save.json  test_save.json.REMOVED.git-id  thresholdAdaptationTest.txt  trainingDecision.txt  trainingDecisionLabel.txt
data/1D_patterns/: oneD_10neurons_4patterns_teacherSignal.txt
data/1D_patterns/control/: oneD_10neurons_4patterns.txt  oneD_10neurons_4patterns_teacherSignal.txt
data/1D_patterns/timeJitter/: oneD_10neurons_4patterns.txt  oneD_10neurons_4patterns_teacherSignal.txt
data/NCARS/: test.txt  test2.txt  testLabel.txt  testLabel2.txt  train.txt  trainLabel.txt  trainLabel2.txt
data/cards/: heart1trainLabel.txt  heart9test.txt  heart9testLabel.txt  test.txt  testHats.txt  testLabel.txt  test_nooff_pip2_rep10_jitter0.txt  test_nooff_pip2_rep10_jitter0Label.txt  test_nooff_pip4_rep1_jitter0.txt  test_nooff_pip4_rep1_jitter0Label.txt  test_pip4_rep10_jitter0.txt  test_pip4_rep10_jitter0Label.txt  train.txt.REMOVED.git-id  trainHatsLabel.txt  trainLabel.txt  train_nooff_pip2_rep50_jitter0.txt  train_nooff_pip2_rep50_jitter0Label.txt  train_nooff_pip4_rep50_jitter0.txt  train_nooff_pip4_rep50_jitter0Label.txt  train_pip4_rep10_jitter0.txt  train_pip4_rep10_jitter0Label.txt
data/generatedPatterns/additiveNoise/: 10bn0nn1fakePatterns_snnTest_2000reps_10msInterval.txt  10bn0nn1fakePatterns_snnTest_200reps_10msInterval.txt  10bn0nn4fakePatterns_snnTest_20000reps_10msInterval.txt.REMOVED.git-id  10bn0nn4fakePatterns_snnTest_200reps_10msInterval.txt  (+2 more)
data/gray_levels/: test12_aps.dat.zip.REMOVED.git-id
data/pokerDVS/: DHtest.txt  DHtestLabel.txt  DHtrain.txt.REMOVED.git-id  DHtrainLabel.txt  DHtraining.txt.REMOVED.git-id  DHtrainingLabel.txt
data/spikeSorting/: 1pattern_n0.1.txt  teacher1pattern_n0.1.txt
data/sudoku/: sudokuRandomSpikes.txt  sudokuRandomSpikesBig.txt  sudokuRandomSpikesFixed.txt
source/: LeakyIntegrateAndFire.hpp  addOn.hpp  addon.hpp  analysis.hpp  biologicalNeuron.hpp  builder.hpp  core.hpp  dataParser.hpp  data_parser.hpp  decisionMakingNeuron.hpp  display.hpp  globalLearningRuleHandler.hpp  gui.qml  gui.qmlc  inputNeuron.hpp  inputViewer.hpp  learningLogger.hpp  learningRule.hpp  learningRuleHandler.hpp  logger.hpp  mainThreadAddOn.hpp  mainThreadAddon.hpp  mainThreadNetworkAddOn.hpp  mainThreadNetworkDelegate.hpp  main_addon.hpp  myelinPlasticity.hpp  myelinPlasticityLogger.hpp  myelinPlasticityReinforcement.hpp  network.hpp  networkAddOn.hpp  networkDelegate.hpp  neuron.hpp  outputViewer.hpp  potentialViewer.hpp  predictionLogger.hpp  qtDisplay.hpp  rand.hpp  rewardModulatedSTDP.hpp  spikeLogger.hpp  standardAddOn.hpp  (+8 more)
source/GUI/: display.hpp  dynamicsViewer.hpp  dynamics_viewer.hpp  gui.qml  gui.qrc  inputViewer.hpp  input_viewer.hpp  outputViewer.hpp  output_viewer.hpp  potentialViewer.hpp  qtDisplay.hpp
source/addOns/: analysis.hpp  classificationLogger.hpp  myelinPlasticityLogger.hpp  potentialLogger.hpp  predictionLogger.hpp  spikeLogger.hpp  sql_example.hpp  weightMaps.hpp
source/addons/: analysis.hpp  classificationLogger.hpp  classification_logger.hpp  connectivity.hpp  mini_spike_logger.hpp  myelinPlasticityLogger.hpp  myelin_plasticity_logger.hpp  potentialLogger.hpp  spikeLogger.hpp  spike_logger.hpp  weightMaps.hpp  weight_maps.hpp
source/dependencies/: puffin.hpp
source/learningRules/: myelinPlasticity 2.hpp  myelinPlasticity.hpp  myelin_plasticity_v1.hpp  myelin_plasticity_v2.hpp  rewardModulatedSTDP.hpp  stdp.hpp  timeInvariantSTDP.hpp
source/learning_rules/: myelin_plasticity_v1.hpp  stdp.hpp  ulpec_stdp.hpp
source/networkExtentions/: computerVisionExtention.hpp
source/neurons/: IF.hpp  LIF.hpp  coba_lif.hpp  cuba_lif.hpp  decisionMaking.hpp  decisionMakingNeuron.hpp  decision_making.hpp  grayLevelNeuron.hpp  hardware.hpp  input.hpp  inputNeuron.hpp  leakyIntegrateAndFire.hpp  memristor.hpp  parrot.hpp  pulse_generator.hpp  regression.hpp  reservoirNode.hpp  ulpec_input.hpp  ulpec_lif.hpp
source/randomDistributions/: cauchy.hpp  lognormal.hpp  normal 2.hpp  normal.hpp  uniform.hpp
source/random_distributions/: cauchy.hpp  lognormal.hpp  normal.hpp  uniform.hpp
source/synapses/: dirac.hpp  exponential.hpp  memristor.hpp  pulse.hpp  square.hpp
source/synapticKernels/: dirac.hpp  exponential.hpp  gaussian.hpp  step.hpp
utilities/matlab/: Adonis Utilities.mltbx  Hummus Utilities.mltbx  hats.m  load_atis_data.m  snn1DPatternGenerator.m  snnAnalysis.m  snnAtisDataParser.m  snnHatsParser.m  snnPokerDataParser.m  snnReader.m  snnSimplePatternGenerator.m
utilities/python/: N-MNIST_singlefile.py  N-MNIST_singlefile_mpi4py.py  POKER_regression.py  convert_MNIST.py  dataset_converter.py  events_io.py  example_callingNetworkFromPython.py  fml.py  generate_rc.py  log_reader.py  logistic.py  logisticN-MNIST.py  logisticN-MNIST2.py  logistic_regression.py  logistic_regression2.py  logistic_utils.py  logreg.py  mlp.py  ncar28x28.mat  pytorch_utils.py  read_functions.py  run_rc.py  test.py  utilities.py
(+50 files in other folders)
